<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_background"
    tools:context="com.technologyminds.ferozproductsorderbookingsystem.MainActivity">

    <include
        android:id="@+id/include"
        layout="@layout/header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:gravity="center"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_edittext_height"
            android:background="@drawable/round_border"
            android:hint="@string/username_hint"
            android:padding="10dip"
            android:inputType="text"
            android:id="@+id/ed_username"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_edittext_height"
            android:background="@drawable/round_border"
            android:layout_marginTop="15dp"
            android:hint="@string/password_hint"
            android:id="@+id/ed_password"
            android:inputType="textPassword"
            android:padding="10dip"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_button_height"
            android:layout_marginTop="35dp"
            android:text="@string/login_button"
            android:textColor="@color/white"
            android:textSize="@dimen/login_button_textsize"
            android:textStyle="bold"
            android:background="@drawable/login_button"
            android:id="@+id/btn_login"/>

    </LinearLayout>

    <include
        android:id="@+id/include1"
        layout="@layout/footer" />

</RelativeLayout>
