<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_background"
    tools:context="com.technologyminds.ferozproductsorderbookingsystem.DashboardActivity">

    <ImageView
        android:id="@+id/ivPic"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="10sp"
        android:layout_marginTop="10sp"
        android:scaleType="fitXY"
        android:src="@drawable/icon_pic" />

    <include
        android:id="@+id/include"
        layout="@layout/header"/>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:layout_marginBottom="70dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:id="@+id/table_menu">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:weightSum="1"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:id="@+id/table_row_1">

                <LinearLayout
                    android:id="@+id/menu_order"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="0.45"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="@drawable/textview_border">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/book_order"/>

                    <TextView
                        android:id="@+id/txt_book_an_order"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/book_an_order_menu"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:textSize="@dimen/menu_text_size"
                        android:textStyle="bold"
                        android:textColor="@color/menu_font"/>
                </LinearLayout>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_weight="0.1"/>

                <LinearLayout
                    android:id="@+id/menu_register"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="0.45"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="@drawable/textview_border">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/register_store"/>

                    <TextView
                        android:id="@+id/txt_register_store"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register_store_menu"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:textSize="@dimen/menu_text_size"
                        android:textStyle="bold"
                        android:textColor="@color/menu_font"/>
                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:weightSum="1"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:id="@+id/table_row_2">

                <LinearLayout
                    android:id="@+id/menu_past_order"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="0.45"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="@drawable/textview_border">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/past_records"/>

                    <TextView
                        android:id="@+id/txt_past_order"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/past_order_menu"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:textSize="@dimen/menu_text_size"
                        android:textStyle="bold"
                        android:textColor="@color/menu_font"/>
                </LinearLayout>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_weight="0.1"/>

                <LinearLayout
                    android:id="@+id/menu_my_account"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="0.45"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="@drawable/textview_border">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/my_account"/>

                    <TextView
                        android:id="@+id/txt_my_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/my_account_menu"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:textSize="@dimen/menu_text_size"
                        android:textStyle="bold"
                        android:textColor="@color/menu_font"/>
                </LinearLayout>

            </TableRow>



            <TableRow
                android:layout_width="match_parent"
                android:layout_height="@dimen/table_row_height"
                android:weightSum="1"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/table_row_3">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="0.45"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:id="@+id/menu_notification"
                    android:background="@drawable/textview_border">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/notification"/>

                    <TextView
                        android:id="@+id/txt_notification"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/notification_menu"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:textSize="@dimen/menu_text_size"
                        android:textStyle="bold"
                        android:textColor="@color/menu_font"/>
                </LinearLayout>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_weight="0.1"/>

                <LinearLayout
                    android:id="@+id/menu_contact_us"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="0.45"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="@drawable/textview_border">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/contact_us"/>

                    <TextView
                        android:id="@+id/txt_contact_us"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_us_menu"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:textSize="@dimen/menu_text_size"
                        android:textStyle="bold"
                        android:textColor="@color/menu_font"/>
                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:layout_marginTop="10dp"
                android:id="@+id/table_row_8"
                android:gravity="center">



            </TableRow>

        </TableLayout>



    </ScrollView>

    <include layout="@layout/footer"/>
</RelativeLayout>
